# ResearchFlow

./: .env.template  .gitignore  README.md  app.py  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile  pyproject.toml
architecture/: generate_diagrams.py
backend/: config.py  server.py  test.py  utils.py
backend/database/: __init__.py  articles.py  init_db.py  qa.py  research_notes.py  summary.py  users.py
backend/research_agent/: __init__.py  edges.py  generate_chain.py  grader.py  graph.py  nodes.py  vector_store.py
backend/schemas/: articles.py  chat.py  qa.py  users.py
backend/services/: articles.py  auth.py  chat.py  rag.py  summary_generation.py  users.py
backend/utilities/: base_utils.py  document_processors.py  nvidia_utils.py
backend/views/: __init__.py  articles.py  chat.py
dags/: articles.py  pdf_download.py  pdf_processor_indexer.py  pipeline.py
frontend/pages/: chat.py  document_viewer.py  list_docs.py  reports.py  summary_generation.py
frontend/utils/: chat.py
