[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = ""
authors = ["Gopi Krishna <gopigof@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.12.7"
langgraph = "^0.2.45"
fastapi = "^0.115.4"
python-jose = "^3.3.0"
sqlalchemy = "2.0.35"
uvicorn = "^0.32.0"
langchain-core = "^0.3.16"
copilotkit = "^0.1.27"
langchain-openai = "^0.2.7"
tavily-python = "^0.5.0"
html2text = "^2024.2.26"
python-dotenv = "^1.0.1"
langchain-community = "0.3.7"
langchain-pinecone = "^0.2.0"
boto3 = "^1.35.59"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
