[tool.poetry]
name = "assignment4"
version = "0.1.0"
description = ""
authors = ["Gopi Krishna <gopigof@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langgraph = "^0.2.45"
fastapi = "^0.115.4"
python-jose = "^3.3.0"
sqlalchemy = "2.0.35"
uvicorn = "^0.32.0"
langchain-core = "^0.3.16"
copilotkit = "^0.1.27"
langchain-openai = "^0.2.7"
tavily-python = "^0.5.0"
html2text = "^2024.2.26"
python-dotenv = "^1.0.1"
langchain-community = "0.3.7"
langchain-pinecone = "^0.2.0"
boto3 = "^1.35.59"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.10"
llama-index-core = "^0.11.22"
llama-index-readers-docling = "^0.2.1"
llama-index-node-parser-docling = "^0.2.0"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-llms-huggingface-api = "^0.2.0"
llama-index-readers-file = "^0.3.0"
llama-index-vector-stores-pinecone = "^0.3.1"
llama-index-embeddings-openai = "^0.2.5"
llama-index = "^0.11.23"
llama-index-embeddings-langchain = "^0.2.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
arxiv = "^2.1.3"
streamlit = "^1.40.1"
fpdf = "^1.7.2"
bcrypt = "^4.2.0"
diagrams = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
